# Aira

./: .gitignore  Cargo.toml  build.rs
.github/workflows/: rust.yml
lang/: base.pot
lang/fr/LC_MESSAGES/: gmod_3d_packager.mo  gmod_3d_packager.po
src/: compile_logic.rs  config.rs  main.rs  qc.rs  qc_utils.rs  tools_utils.rs
src/qc_utils/: mod.rs
ui/: main.slint
