[package]
name = "gmod_3d_packager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rfd = "0.11.4"
slint = { version = "1.1.1", default-features = true, features = ["gettext", "backend-qt"] }


[build-dependencies]
slint-build = "1.1.1"
