[package]
name = "gmod_3d_packager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log4rs = { version = "1.2.0", default-features = true }
rfd = { version = "0.11.4", default-features = false, features = ["gtk3"] }
slint = { version = "1.1.1", default-features = true, features = ["gettext", "backend-qt"] }
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.6"


[build-dependencies]
slint-build = "1.1.1"
winres="0.1.12"
