[package]
name = "aira"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log4rs = { version = "1.2.0", default-features = true, features = ["file_appender"] }
rfd = { version = "0.11.4", default-features = false, features = ["gtk3"] }
slint = { version = "1.1.1", default-features = true, features = ["log", "gettext", "backend-qt"] }
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.6"
walkdir = "2.3.3"
regex = "1.9.3"
rayon = "1.7.0"
log = "0.4.20"


[build-dependencies]
slint-build = "1.1.1"
winresource = "0.1"
